--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,14 @@ img{
     position: absolute;
     bottom:0;
 }
+.navigation-link,
+.navigation-link,
+.contacts-link,
+.contacts-link,
+.footer-link,
+.footer-link{
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .navigation-link:hover,
 .navigation-link:focus,
 .contacts-link:hover,
@@ -122,9 +130,6 @@ img{
 .footer-link:focus {
     color: var(--accent-color);
     fill: var(--accent-color);
- 
- transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 .contacts{
     display: flex;
@@ -273,6 +278,9 @@ img{
     min-width: 73px;
     border: none;
     padding: 6px 22px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-list{
 margin-bottom: 50px;
@@ -313,6 +321,7 @@ h6{
     color: var(--primary-middle);
 
 }
+
 .portfolio-button:focus,
 .portfolio-button:hover{
     background-color: var(--accent-color);
@@ -320,9 +329,6 @@ h6{
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(209, 203, 203, 0.12);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .container{
 width: 1200px;
@@ -438,8 +444,9 @@ margin-right: auto;
     border-radius: 50%;
     color:#AFB1B8;
     align-items: center;
-    justify-content: center
-    ;
+    justify-content: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .media-icon {
     width: 20px;
@@ -450,8 +457,6 @@ margin-right: auto;
 .media-links:focus{
     background-color: var(--accent-color);
      color: var(--primary-light);
-     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .media-item:not(:last-child){
     margin-right: 10px;
@@ -500,6 +505,8 @@ margin-right: auto;
     align-items: center;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-list{
     fill: currentColor;
@@ -508,8 +515,6 @@ margin-right: auto;
 .clients-link:focus{
     fill: var(--accent-color);
     border-color: var(--accent-color);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .container .footer-second{
     display: flex;
@@ -546,6 +551,7 @@ margin-bottom: 20px;
     justify-content: center;
     color: var(--primary-light);
     background-color: #FFFFFF1A;
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-item:not(:last-child){
     margin-right: 10px;
@@ -558,23 +564,25 @@ margin-bottom: 20px;
 .footer-svg:hover,
 .footer-svg:focus{
     background-color: var(--accent-color);
-    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .flex-element-hover{
     display: block;
     text-decoration: none;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .flex-element-hover:hover,
 .flex-element-hover:focus{
+
     box-shadow: 1px 4px 6px 0px #00000029,
  0px 4px 4px 0px #0000000F,
  0px 1px 1px 0px #0000001F;
- transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 
 }
-.flex-element:hover .flex-element-overlay{
+.flex-element-hover:hover .flex-element-overlay,
+.flex-element-hover:focus .flex-element-overlay{
 transform: translateY(0);
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .images-overlay{
     position: absolute;
@@ -595,6 +603,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     letter-spacing: 0.03em;
     text-transform:uppercase;
     color: var(--primary-light);
+    margin: 0%;
 }   
 .backdrop{
     position: fixed;
@@ -643,6 +652,7 @@ height: 100%;
 background-color: #2196F3E5;
 transform: translateY(140%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .flex-element-text{
